# amaze

./: .gitignore  .m.sh  CMakeLists.txt  Controller.h  Makefile  README.md  TODO.txt  View.cpp  amaze.cfg  amaze.icns  amaze.sln  amaze.vcxproj  amaze.vcxproj.filters  amaze_vs.sln  amaze_vs.vcxproj  amaze_vs.vcxproj.filters  controller.cpp  controller.h  debug.log.previous  exceptions.h  gamemodel.cpp  gamemodel.h  gamepad.cpp  gamepad.h  gameshape.cpp  gameshape.h  helperfunctions.cpp  helperfunctions.h  igraphicsadapter.h  imodel.h  joystick.cpp  joystick.h  log.cpp  log.h  m.sh  main.cpp  menu.cpp  menu.h  preferences.cpp  preferences.h  (+14 more)
amaze.app/Contents/: Info.plist
amaze.app/Contents/Resources/: amaze.icns
amazeUnitTests/: amazeUnitTests.vcxproj  amazeUnitTests.vcxproj.filters
amazeunittests/: main.cpp  vectorFont_Test.cpp
artwork/: amaze.afphoto  amaze.psd  help1.psd  help2.psd  level_selector.psd  level_selector_locked.psd  menu_music_off.psd  menu_music_on.psd  no_more_levels.psd  ship.psd  ship_basic.psd  ship_destroyed.psd  splash.psd  success.psd
artwork/amaze.band/Alternatives/000/: DisplayState.plist  DisplayStateArchive  MetaData.plist  ProjectData
artwork/amaze.band/Resources/: ProjectInformation.plist
data/: level0.cfg  level1.cfg  level10.cfg  level11.cfg  level12.cfg  level13.cfg  level14.cfg  level15.cfg  level2.cfg  level22.cfg  level3.cfg  level4.cfg  level5.cfg  level52.cfg  level53.cfg  level54.cfg  level6.cfg  level69.cfg  level7.cfg  level8.cfg  level9.cfg  level97.cfg  level98.cfg  level99.cfg
decrypt/: Makefile  main.cpp
src/: controller.cpp  controller.h  gamemodel.cpp  gamemodel.h  gamepad.cpp  gamepad.h  gameshape.cpp  igraphicsadapter.h  imgui.cpp  imgui.h  menu.cpp  menu.h  sfmladapter.cpp  sfmladapter.h  shape.cpp  shape.h  shipmodel.cpp  utils.cpp  utils.h  vectorfont.h  view.cpp
tests/: Makefile  main.cpp  vectorfont_test.cpp
tmplibs/: libsfml-network.2.6.2.dylib  libsfml-system.2.6.2.dylib  libsfml-window.2.6.2.dylib
tmplibs/arm64/: fixup.sh  libsfml-audio.2.6.2.dylib  libsfml-graphics.2.6.2.dylib
tmplibs/x86_64/: fixup.sh  libsfml-audio.2.6.2.dylib  libsfml-graphics.2.6.2.dylib  libsfml-network.2.6.2.dylib  libsfml-system.2.6.2.dylib  libsfml-window.2.6.2.dylib
utils/: svg_to_level.py
